--- a/mycloud/spring-dev.properties
+++ b/mycloud/spring-dev.properties
@@ -1,5 +1,3 @@
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-server.port=8882
-hystrix.command.default.execution.timeout.enabled=false 
-management.security.enabled=false
+
+foo = foo version 2
+democonfigclient.message=hello spring io
